--- a/reference.html
+++ b/reference.html
@@ -25,85 +25,84 @@
       <div class="reference-app" aria-label="Reference hub">
         <div class="reference-status">
           <span class="reference-status-title">Reference Hub</span>
-          <span class="reference-status-pill">Ready</span>
         </div>
         <section class="reference-hero">
           <h1>Reference</h1>
-          <p>Pick an emergency category to open its focused dictionary of doses, normal values, and quick pearls. We can wire these buttons to dedicated pages as we build them out.</p>
+          <p>Select a section to open its focused pocket guide. Each page is ready for detailed content as soon as you send it.</p>
         </section>
         <section class="reference-card-list" aria-label="Reference categories">
-          <button class="reference-card" type="button" data-target="reference-cardiac.html">
+          <a class="reference-card" href="reference-acls.html">
             <div>
-              <div class="reference-card-label">Cardiac Emergencies</div>
-              <div class="reference-card-sub">ACS meds, arrhythmias, hemodynamics.</div>
-            </div>
-            <span aria-hidden="true">›</span>
-          </button>
-          <button class="reference-card" type="button" data-target="reference-respiratory.html">
-            <div>
-              <div class="reference-card-label">Respiratory Distress</div>
-              <div class="reference-card-sub">Asthma, COPD, RSI meds.</div>
-            </div>
-            <span aria-hidden="true">›</span>
-          </button>
-          <button class="reference-card" type="button" data-target="reference-neuro.html">
-            <div>
-              <div class="reference-card-label">Neurologic / Stroke</div>
-              <div class="reference-card-sub">Thrombolytics, seizure rescue dosing.</div>
-            </div>
-            <span aria-hidden="true">›</span>
-          </button>
-          <button class="reference-card" type="button" data-target="reference-gi.html">
-            <div>
-              <div class="reference-card-label">GI Emergencies</div>
-              <div class="reference-card-sub">Bleed reversal, antiemetics, pancreatitis.</div>
-            </div>
-            <span aria-hidden="true">›</span>
-          </button>
-          <button class="reference-card" type="button" data-target="reference-gu.html">
-            <div>
-              <div class="reference-card-label">GU / Renal</div>
-              <div class="reference-card-sub">Electrolyte corrections, UTI, obstruction.</div>
-            </div>
-            <span aria-hidden="true">›</span>
-          </button>
-          <button class="reference-card" type="button" data-target="reference-trauma.html">
-            <div>
-              <div class="reference-card-label">Trauma &amp; Shock</div>
-              <div class="reference-card-sub">Massive transfusion, TXA, analgesia.</div>
-            </div>
-            <span aria-hidden="true">›</span>
-          </button>
-          <button class="reference-card" type="button" data-target="reference-toxicology.html">
-            <div>
-              <div class="reference-card-label">Toxicology</div>
-              <div class="reference-card-sub">Antidotes, toxidromes, labs.</div>
-            </div>
-            <span aria-hidden="true">›</span>
-          </button>
-          <button class="reference-card" type="button" data-target="reference-endocrine.html">
-            <div>
-              <div class="reference-card-label">Endocrine / Metabolic</div>
-              <div class="reference-card-sub">DKA, thyroid storm, adrenal crisis.</div>
-            </div>
-            <span aria-hidden="true">›</span>
-          </button>
-          <a class="reference-card" href="reference-peds.html">
-            <div>
-              <div class="reference-card-label">Pediatric Emergencies</div>
-              <div class="reference-card-sub">Weight-based crash cart dosing.</div>
+              <div class="reference-card-label">ACLS</div>
+              <div class="reference-card-sub">Defibrillation, cardioversion, code pearls.</div>
             </div>
             <span aria-hidden="true">›</span>
           </a>
-          <button class="reference-card" type="button" data-target="reference-obgyn.html">
+          <a class="reference-card" href="reference-pressors.html">
             <div>
-              <div class="reference-card-label">OB / GYN</div>
-              <div class="reference-card-sub">PPH meds, PIH, ectopic support.</div>
+              <div class="reference-card-label">Pressors</div>
+              <div class="reference-card-sub">Norepi/epi drips, dirty epi mix, titration.</div>
             </div>
             <span aria-hidden="true">›</span>
-          </button>
+          </a>
+          <a class="reference-card" href="reference-rsi.html">
+            <div>
+              <div class="reference-card-label">Rapid Sequence Intubation</div>
+              <div class="reference-card-sub">Induction choices, paralytics, post-int sedation.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </a>
+          <a class="reference-card" href="reference-neuro.html">
+            <div>
+              <div class="reference-card-label">Neurologic Emergencies</div>
+              <div class="reference-card-sub">ICP, seizures, status, ICH/CVA goals.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </a>
+          <a class="reference-card" href="reference-cardiovascular.html">
+            <div>
+              <div class="reference-card-label">Cardiovascular Emergencies</div>
+              <div class="reference-card-sub">Hypertensive crisis, ACS, arrhythmias, LVAD.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </a>
+          <a class="reference-card" href="reference-obgyn.html">
+            <div>
+              <div class="reference-card-label">OBGYN Emergencies</div>
+              <div class="reference-card-sub">Eclampsia, PPH, emergent vaginal bleeding.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </a>
+          <a class="reference-card" href="reference-endocrine-renal.html">
+            <div>
+              <div class="reference-card-label">Endocrine/Renal Emergencies</div>
+              <div class="reference-card-sub">Hyponatremia, hyperkalemia, thyroid storm.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </a>
+          <a class="reference-card" href="reference-hematologic.html">
+            <div>
+              <div class="reference-card-label">Hematologic Emergencies</div>
+              <div class="reference-card-sub">Anticoag reversal, TXA, factor replacement.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </a>
+          <a class="reference-card" href="reference-toxicologic.html">
+            <div>
+              <div class="reference-card-label">Toxicologic Emergencies</div>
+              <div class="reference-card-sub">Serotonin, acetaminophen, TCA &amp; tox alcohols.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </a>
+          <a class="reference-card" href="reference-peds.html">
+            <div>
+              <div class="reference-card-label">Pediatric Emergencies</div>
+              <div class="reference-card-sub">Calcs, PALS dosing, airway/allergy/vent pearls.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </a>
         </section>
-        <div class="reference-footer">More sections coming soon — let me know what to surface first.</div>
+        <div class="reference-footer">Each section has its own page — share content when you’re ready.</div>
       </div>
     </main>
   </body>
